--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "moduleResolution": "codenet",
     "resolvePackageJsonExports": true,
     "esModuleInterop": true,
     "isolatedModules": true,
